@@ -149,7 +149,7 @@ fi
 AM_CONDITIONAL(GAMIN_DEBUG, test x$debug = xyes)
 
 debug_api=no
-if test "`hostname`" == "paphio" -a "`pwd`" == "/u/veillard/gamin"
+if test "`hostname`" = "paphio" -a "`pwd`" = "/u/veillard/gamin"
 then
     debug_api=yes
 fi
@@ -403,7 +403,7 @@ AC_SUBST(pythondir)
 AC_SUBST(PYTHON_VERSION)
 AC_SUBST(PYTHON_SUBDIR)
 AC_SUBST(PYTHON_INCLUDES)
-AC_SUBST(PYTHON_PYTHON_SITE_PACKAGES)
+AC_SUBST(PYTHON_SITE_PACKAGES)
 
 dnl ==========================================================================
 
