@@ -1,3 +1,9 @@
+Fri Mar 25 11:04:16 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* configure.in libgamin/gam_api.c server/gam_channel.c: bug fixes
+	  and portability patches from Joe Marcus Clarke when porting to
+	  FreeBSD.
+
 Wed Mar 23 16:16:38 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* python/tests/Makefile.am python/tests/flood4.py: one more flooding
